--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <title>Note App</title>
         <link rel="stylesheet" href="notes.css">
+        <script src="notes.js"></script>
     </head>
     <body>
-        <div class="container">
+        <div id="content" class="container">
             <div id="title">
                 <h1>Notas personales</h1>
             </div>
