save and recovery notes

--- a/index.html
+++ b/index.html
@@ -11,19 +11,11 @@
                 <h1>Notas personales</h1>
             </div>
             <div id="menu">
-                <p>Crear o Eliminar Notas</p>
+                <p>Crear, Eliminar y Guardar Notas</p>
                 <button type="button" id="add" class="panel">+</button>
                 <button type="button" id="delete" class="panel">-</button>
-            </div>
-            <div id="1">
-                <button class="del-itself">-</button>
-                <textarea name="1" cols="12" rows="15" placeholder="New Note"></textarea>
+                <button type="button" id="save">Guardar Notas</button>
             </div>           
-            <div id="2">
-                <button class="del-itself">-</button>
-                <textarea name="2" cols="12" rows="15" placeholder="New Note"></textarea>
-            </div>           
-            
         </div>
     </body>
 </html>
